--- a/PadariaDelicioPao/padaria.css
+++ b/PadariaDelicioPao/padaria.css
@@ -3,6 +3,12 @@
 
 
 
+.cursive-text {
+    font-family: "Dancing Script", cursive;
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #5A3921; 
+}
 
 .carousel-item img {
     height: 400px;
