Adicionando imagens a página bolos

--- a/PadariaDelicioPao/padaria.css
+++ b/PadariaDelicioPao/padaria.css
@@ -90,3 +90,11 @@ body {
     margin-bottom: 100px;
 }
 
+.item-description {
+    font-size: 1rem; /* Ajusta o tamanho do texto */
+    color: #5A3921; /* Cor consistente */
+    text-align: center; /* Centraliza o texto */
+    margin-top: 10px; /* Adiciona espaçamento superior */
+}
+
+
