Adicionando código a página Contato

--- a/PadariaDelicioPao/padaria.css
+++ b/PadariaDelicioPao/padaria.css
@@ -91,10 +91,10 @@ body {
 }
 
 .item-description {
-    font-size: 1rem; /* Ajusta o tamanho do texto */
-    color: #5A3921; /* Cor consistente */
-    text-align: center; /* Centraliza o texto */
-    margin-top: 10px; /* Adiciona espaçamento superior */
+    font-size: 1rem; 
+    color: #5A3921; 
+    text-align: center; 
+    margin-top: 10px; 
 }
 
 
